# milligrad

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
demo/: classification.ipynb  linear-regression.ipynb
src/milligrad/: __init__.py  datasets.py  tensor.py
src/milligrad/nn/: __init__.py  functional.py  module.py  optim.py
