[project]
name = "milligrad"
version = "0.1"
description = "Basic Tensor and Neural Networks Package"
readme = "README.md"
authors = [ {name = "Malte Dehling", email = "mdehling@gmail.com"} ]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
]

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
package-dir = {"" = "src"}
